@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Ironclad</title>
-<!-- 2017-09-09 sam. 18:42 -->
+<!-- 2017-09-10 dim. 19:55 -->
 <meta  charset="utf-8">
 <meta  name="generator" content="Org-mode">
 <meta  name="author" content="The Ironclad developers">
@@ -1963,6 +1963,72 @@ obtain a digest of all the data written to the stream.
 <p>
 <span class="underline">Note:</span> Calling <a href="#produce-digest">produce-digest</a> on a digest stream does not alter
 the internal state of the digest.
+</p>
+
+
+<div class="org-src-container">
+
+<pre class="src src-lisp" id="with-digesting-stream">(with-digesting-stream (var digest-name) &amp;body body) =&gt; digest
+</pre>
+</div>
+
+<p>
+Within <i>body</i>, <i>var</i> is bound to a digesting stream for the
+<i>digest-name</i> algorithm. After all the forms in <i>body</i> have been
+executed, the digest of the data that has been written to <i>var</i> is
+returned.
+</p>
+</div>
+</div>
+
+<div id="outline-container-sec-10-3" class="outline-3">
+<h3 id="sec-10-3">Cipher streams</h3>
+<div class="outline-text-3" id="text-10-3">
+<p>
+Cipher streams encrypt or decrypt the data written to or read from
+them according to a specific cipher algorithm.
+</p>
+
+
+<div class="org-src-container">
+
+<pre class="src src-lisp" id="make-encrypting-stream">(make-encrypting-stream stream cipher mode key &amp;key initialization-vector direction padding) =&gt; stream
+</pre>
+</div>
+
+<p>
+Make a stream wrapped around the binary stream <i>stream</i> that encrypts
+data according to the algorithm <i>cipher</i> initialized with a <i>mode</i>,
+a <i>key</i> and an <i>initialization-vector</i>.
+If <i>direction</i> is <code>:input</code>, the data read from the created input
+stream is the encryption of the data coming from <i>stream</i>.
+If <i>direction</i> is <code>:output</code>, the data written to the created output
+stream is encrypted before being sent to <i>stream</i>.
+</p>
+
+
+<div class="org-src-container">
+
+<pre class="src src-lisp" id="make-decrypting-stream">(make-decrypting-stream stream cipher mode key &amp;key initialization-vector direction padding) =&gt; stream
+</pre>
+</div>
+
+<p>
+Make a stream wrapped around the binary stream <i>stream</i> that decrypts
+data according to the algorithm <i>cipher</i> initialized with a <i>mode</i>,
+a <i>key</i> and an <i>initialization-vector</i>.
+If <i>direction</i> is <code>:input</code>, the data read from the created input
+stream is the decryption of the data coming from <i>stream</i>.
+If <i>direction</i> is <code>:output</code>, the data written to the created output
+stream is decrypted before being sent to <i>stream</i>.
+</p>
+
+
+<p>
+<span class="underline">Note:</span> For the moment, only stream ciphers and block ciphers in CTR
+mode are supported by <a href="#make-encrypting-stream">make-encrypting-stream</a> and
+<a href="#make-decrypting-stream">make-decrypting-stream</a>. Therefore the <i>padding</i> parameter is always
+ignored.
 </p>
 </div>
 </div>
